@@ -43,12 +43,15 @@ import org.apache.lucene.util.IOUtils;
 import org.apache.solr.JSONTestUtil;
 import org.apache.solr.SolrTestCaseJ4.SuppressSSL;
 import org.apache.solr.client.solrj.SolrClient;
+import org.apache.solr.client.solrj.SolrRequest.METHOD;
+import org.apache.solr.client.solrj.SolrRequest.SolrRequestType;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.apache.HttpSolrClient;
+import org.apache.solr.client.solrj.impl.HttpSolrClient;
 import org.apache.solr.client.solrj.request.AbstractUpdateRequest;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
 import org.apache.solr.client.solrj.request.CoreAdminRequest.Create;
 import org.apache.solr.client.solrj.request.CoreAdminRequest.Unload;
+import org.apache.solr.client.solrj.request.GenericSolrRequest;
 import org.apache.solr.client.solrj.request.MetricsRequest;
 import org.apache.solr.client.solrj.request.QueryRequest;
 import org.apache.solr.client.solrj.request.SolrQuery;
@@ -80,6 +83,7 @@ import org.apache.solr.common.util.ExecutorUtil;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.SolrNamedThreadFactory;
 import org.apache.solr.embedded.JettySolrRunner;
+import org.apache.solr.util.ErrorLogMuter;
 import org.apache.solr.util.TestInjection;
 import org.apache.solr.util.TestInjection.Hook;
 import org.junit.BeforeClass;
@@ -695,10 +699,9 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
 
     // try add commitWithin
     long before = cloudClient.query(new SolrQuery("*:*")).getResults().getNumFound();
-    for (SolrClient client : clients) {
+    for (var client : clients) {
       assertEquals(
-          "unexpected pre-commitWithin document count on node: "
-              + ((HttpSolrClient) client).getBaseURL(),
+          "unexpected pre-commitWithin document count on node: " + client.getBaseURL(),
           before,
           client.query(new SolrQuery("*:*")).getResults().getNumFound());
     }
@@ -759,7 +762,7 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
     SolrQuery query = new SolrQuery("*:*");
     query.addFacetField(tsort);
     query.setFacetMissing(false);
-    QueryResponse resp = queryRandomShard(query);
+    QueryResponse resp = queryRandomShard("/select", query);
     List<FacetField> ffs = resp.getFacetFields();
     for (FacetField ff : ffs) {
       if (ff.getName().equals(tsort) == false) continue;
@@ -1040,7 +1043,7 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
 
   private void testStopAndStartCoresInOneInstance() throws Exception {
     JettySolrRunner jetty = jettys.get(0);
-    try (final SolrClient httpSolrClient = (HttpSolrClient) jetty.newClient(15000, 60000)) {
+    try (final var httpSolrClient = jetty.newClient(15000, 60000)) {
       ThreadPoolExecutor executor = null;
       try {
         executor =
@@ -1144,14 +1147,14 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
     }
     params.set("name", collectionName);
     params.set("collection.configName", configSetName);
-    QueryRequest request = new QueryRequest(params);
-    request.setPath("/admin/collections");
+    var request =
+        new GenericSolrRequest(METHOD.POST, "/admin/collections", SolrRequestType.ADMIN, params);
 
     CollectionAdminResponse res = new CollectionAdminResponse();
     if (client == null) {
-      final String baseUrl = ((HttpSolrClient) clients.get(clientIndex)).getBaseURL();
+      final String baseUrl = clients.get(clientIndex).getBaseURL();
 
-      try (SolrClient aClient = createNewSolrClient("", baseUrl)) {
+      try (SolrClient aClient = createNewSolrClient(baseUrl, null)) {
         res.setResponse(aClient.request(request));
       }
     } else {
@@ -1221,6 +1224,7 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
 
   // cloud level test mainly needed just to make sure that versions and errors are propagated
   // correctly
+  @SuppressWarnings("try")
   private void doOptimisticLockingAndUpdating() throws Exception {
     log.info("### STARTING doOptimisticLockingAndUpdating");
     printLayout();
@@ -1228,12 +1232,12 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
     final SolrInputDocument sd = sdoc("id", 1000, "_version_", -1);
     indexDoc(sd);
 
-    ignoreException("version conflict");
-    for (SolrClient client : clients) {
-      SolrException e = expectThrows(SolrException.class, () -> client.add(sd));
-      assertEquals(409, e.code());
+    try (ErrorLogMuter ignored = ErrorLogMuter.regex("version conflict")) {
+      for (SolrClient client : clients) {
+        SolrException e = expectThrows(SolrException.class, () -> client.add(sd));
+        assertEquals(409, e.code());
+      }
     }
-    unIgnoreException("version conflict");
 
     // TODO: test deletes.  SolrJ needs a good way to pass version for delete...
 
@@ -1248,7 +1252,7 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
       expected.add(val);
     }
 
-    QueryRequest qr = new QueryRequest(params("qt", "/get", "id", "1000"));
+    QueryRequest qr = new QueryRequest("/get", params("id", "1000"));
     for (SolrClient client : clients) {
       val += 10;
       NamedList<?> rsp = client.request(qr);
@@ -1259,7 +1263,7 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
 
   private void testNumberOfCommitsWithCommitAfterAdd() throws SolrServerException, IOException {
     log.info("### STARTING testNumberOfCommitsWithCommitAfterAdd");
-    long startCommits = getNumCommits((HttpSolrClient) clients.get(0));
+    long startCommits = getNumCommits(clients.getFirst());
 
     NamedList<Object> result =
         clients
@@ -1270,17 +1274,13 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
                     .setCommitWithin(900000)
                     .setAction(AbstractUpdateRequest.ACTION.COMMIT, true, true));
 
-    long endCommits = getNumCommits((HttpSolrClient) clients.get(0));
+    long endCommits = getNumCommits(clients.getFirst());
     assertEquals(startCommits + 1L, endCommits);
   }
 
-  private Long getNumCommits(HttpSolrClient sourceClient) throws SolrServerException, IOException {
-    String collection = sourceClient.getDefaultCollection();
-    try (SolrClient client =
-        new HttpSolrClient.Builder(sourceClient.getBaseURL())
-            .withConnectionTimeout(15000, TimeUnit.MILLISECONDS)
-            .withSocketTimeout(60000, TimeUnit.MILLISECONDS)
-            .build()) {
+  private Long getNumCommits(HttpSolrClient client) throws SolrServerException, IOException {
+    String collection = client.getDefaultCollection();
+    {
       var req = new MetricsRequest(SolrParams.of("wt", "prometheus"));
 
       NamedList<Object> resp = client.request(req);
@@ -1318,7 +1318,7 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
               .setNode(jettys.get(0).getNodeName())
               .process(cloudClient);
       for (String coreName : resp.getCollectionCoresStatus().keySet()) {
-        collectionClients.add(createNewSolrClient(coreName, jettys.get(0).getBaseUrl().toString()));
+        collectionClients.add(createNewSolrClient(jettys.get(0).getBaseUrl().toString(), coreName));
       }
     }
 
@@ -1379,11 +1379,7 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
             .getLeader("shard1");
 
     // now test that unloading a core gets us a new leader
-    try (SolrClient unloadClient =
-        new HttpSolrClient.Builder(jettys.get(0).getBaseUrl().toString())
-            .withConnectionTimeout(15000, TimeUnit.MILLISECONDS)
-            .withSocketTimeout(60000, TimeUnit.MILLISECONDS)
-            .build()) {
+    try (SolrClient unloadClient = jettys.getFirst().newClient(15000, 60000)) {
       Unload unloadCmd = new Unload(true);
       unloadCmd.setCoreName(leader.getCoreName());
 
@@ -1431,12 +1427,11 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
 
   private void testSearchByCollectionName() throws SolrServerException, IOException {
     log.info("### STARTING testSearchByCollectionName");
-    SolrClient client = clients.get(0);
-    final String baseUrl = ((HttpSolrClient) client).getBaseURL();
+    final String baseUrl = clients.getFirst().getBaseURL();
 
     // the cores each have different names, but if we add the collection name to the url
     // we should get mapped to the right core
-    try (SolrClient client1 = createNewSolrClient(oneInstanceCollection, baseUrl)) {
+    try (SolrClient client1 = createNewSolrClient(baseUrl, oneInstanceCollection)) {
       SolrQuery query = new SolrQuery("*:*");
       long oneDocs = client1.query(query).getResults().getNumFound();
       assertEquals(3, oneDocs);
@@ -1445,13 +1440,12 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
 
   private void testUpdateByCollectionName() throws SolrServerException, IOException {
     log.info("### STARTING testUpdateByCollectionName");
-    SolrClient client = clients.get(0);
-    final String baseUrl = ((HttpSolrClient) client).getBaseURL();
+    final String baseUrl = clients.getFirst().getBaseURL();
 
     // the cores each have different names, but if we add the collection name to the url
     // we should get mapped to the right core
     // test hitting an update url
-    try (SolrClient client1 = createNewSolrClient(oneInstanceCollection, baseUrl)) {
+    try (SolrClient client1 = createNewSolrClient(baseUrl, oneInstanceCollection)) {
       client1.commit();
     }
   }
@@ -1465,7 +1459,7 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
     assertEquals(0, response.getStatus());
     List<SolrClient> collectionClients = new ArrayList<>();
     for (String coreName : response.getCollectionCoresStatus().keySet()) {
-      collectionClients.add(createNewSolrClient(coreName, jettys.get(0).getBaseUrl().toString()));
+      collectionClients.add(createNewSolrClient(jettys.get(0).getBaseUrl().toString(), coreName));
     }
 
     SolrClient client1 = collectionClients.get(0);
@@ -1539,7 +1533,7 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
 
     pending.add(completionService.submit(call));
 
-    collectionClients.add(createNewSolrClient(collection + num, baseUrl));
+    collectionClients.add(createNewSolrClient(baseUrl, collection + num));
   }
 
   private void testMultipleCollections() throws Exception {
@@ -1661,7 +1655,7 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
             return null;
           };
 
-      collectionClients.add(createNewSolrClient(collection, runner.getBaseUrl().toString()));
+      collectionClients.add(createNewSolrClient(runner.getBaseUrl().toString(), collection));
       pending.add(completionService.submit(call));
       while (pending != null && pending.size() > 0) {
 
@@ -1673,43 +1667,15 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
   }
 
   @Override
-  protected SolrClient createNewSolrClient(String collection, String baseUrl) {
-
-    SolrClient client = getHttpSolrClient(baseUrl, collection);
-
-    return client;
-  }
-
-  /**
-   * @param collection the name of a collection or core to set as the "default" on the created
-   *     client.
-   * @param baseUrl the "base" URL of a Solr node. Should <em>not</em> contain a collection or core
-   *     name.
-   * @param connectionTimeoutMillis the HTTP connection timeout in milliseconds
-   * @param socketTimeoutMillis the HTTP socket-read timeout in milliseconds
-   */
-  protected SolrClient createNewSolrClient(
-      String collection, String baseUrl, int connectionTimeoutMillis, int socketTimeoutMillis) {
-
-    SolrClient client =
-        new HttpSolrClient.Builder(baseUrl)
-            .withDefaultCollection(collection)
-            .withConnectionTimeout(connectionTimeoutMillis, TimeUnit.MILLISECONDS)
-            .withSocketTimeout(socketTimeoutMillis, TimeUnit.MILLISECONDS)
-            .build();
-
-    return client;
-  }
-
-  @Override
-  protected QueryResponse queryRandomShard(ModifiableSolrParams params)
+  protected QueryResponse queryRandomShard(String requestHandler, ModifiableSolrParams params)
       throws SolrServerException, IOException {
 
-    if (r.nextBoolean()) return super.queryRandomShard(params);
+    if (r.nextBoolean()) return super.queryRandomShard(requestHandler, params);
 
     if (r.nextBoolean()) params.set("collection", DEFAULT_COLLECTION);
 
-    QueryResponse rsp = getCommonCloudSolrClient().query(params);
+    QueryResponse rsp =
+        new QueryRequest(requestHandler, params).process(getCommonCloudSolrClient());
     return rsp;
   }
 
